p2ws_package/Devpp2ws-Package/objects/Compensation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>มูลค่าเป็นเงินของสิ่งที่ Compensate</description>
        <label>Amount (Cash/EMD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Status of this approval request.</description>
        <formula>IMAGE(
If(Text(Status__c) == &quot;Approved&quot;, 
&quot;/resource/icon_case/Status_Approved.gif&quot;,
If(Text(Status__c) == &quot;Rejected&quot;, 
&quot;/resource/icon_case/Status_Rejected.gif&quot;,
IF(Text(Status__c) == &quot;Pending&quot;,
&quot;/resource/icon_case/Status_Pending.gif&quot;,
IF(Text(Status__c) == &quot;Draft&quot;,
&quot;/resource/icon_case/Status_Draft.gif&quot;,
IF(Text(Status__c) == &quot;Obsolete&quot;,
&quot;/resource/icon_case/Status_Obsolete.gif&quot;,
&quot;/resource/icon_case/Status_New.gif&quot;)))))
,&quot;&quot;,25,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <description>ID of the case associated with this compensation.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the case group member associated with this compensation.</description>
        <label>Case Group Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CaseId__c</field>
                <operation>equals</operation>
                <valueField>Case_Group_Member__c.Caseid__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Group_Member__c</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation_Account_Center__c</fullName>
        <label>Compensation Account Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1030100</fullName>
                </value>
                <value>
                    <fullName>1015519</fullName>
                </value>
                <value>
                    <fullName>1301220</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compensation_Account_Number__c</fullName>
        <label>Compensation Account Number</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Compensation_Account_Center__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>631070</fullName>
                    <label>631070 - Baggage Claims Compensation</label>
                </value>
                <value>
                    <fullName>631071</fullName>
                    <label>631071 - Injury</label>
                </value>
                <value>
                    <fullName>631080</fullName>
                    <label>631080 - Compensation EX-Gratia Passenger Complaint&amp;Claim</label>
                </value>
                <value>
                    <fullName>631130</fullName>
                    <label>631130 - DBC / DGC</label>
                </value>
                <value>
                    <fullName>631140</fullName>
                    <label>631140 - Customer Relations EMD</label>
                </value>
                <value>
                    <fullName>631150</fullName>
                    <label>631150 - Inflight Service Compliment</label>
                </value>
                <value>
                    <fullName>811106</fullName>
                    <label>811106 -  Int.Charge for Other Flight Kitchen (for Lounge Access Voucher)</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compensation_Detail__c</fullName>
        <description>Detail of the compensation.</description>
        <label>Compensation Detail</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compensation_Tools__c</fullName>
        <label>Compensation Tools</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Compensation_Account_Number__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Complimentary Ticket</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>EMD</fullName>
                </value>
                <value>
                    <fullName>Excess Baggage</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Lounge Access Voucher</fullName>
                </value>
                <value>
                    <fullName>Mileage Compensation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Upgrading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compensation_Type__c</fullName>
        <description>Displays the compensation tools</description>
        <label>Compensation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baggage Damage</fullName>
                </value>
                <value>
                    <fullName>Baggage Delay</fullName>
                </value>
                <value>
                    <fullName>Baggage Loss</fullName>
                </value>
                <value>
                    <fullName>Baggage Pilferage</fullName>
                </value>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Check in Service</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Denied Boarding</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>EC261</fullName>
                </value>
                <value>
                    <fullName>Food poisoning</fullName>
                </value>
                <value>
                    <fullName>Foreign object</fullName>
                </value>
                <value>
                    <fullName>Handling of Flight Irregularity</fullName>
                </value>
                <value>
                    <fullName>IFE (in-flight entertainment) malfunction</fullName>
                </value>
                <value>
                    <fullName>Inadmissible passenger</fullName>
                </value>
                <value>
                    <fullName>In-Flight Service</fullName>
                </value>
                <value>
                    <fullName>Injury before boarding/after/on arrival/Medical assistance</fullName>
                </value>
                <value>
                    <fullName>Injury on Board</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                </value>
                <value>
                    <fullName>Medical assistance</fullName>
                </value>
                <value>
                    <fullName>On board Catering</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reservation Service</fullName>
                </value>
                <value>
                    <fullName>Schedule Deviation</fullName>
                </value>
                <value>
                    <fullName>Seat malfunction</fullName>
                </value>
                <value>
                    <fullName>Special meal request</fullName>
                </value>
                <value>
                    <fullName>Ticketing Service</fullName>
                </value>
                <value>
                    <fullName>Web Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_At_Mobile__c</fullName>
        <label>Created At (Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>SO code of the currency. Must be one of the valid alphabetic, three-letter currency ISO codes defined by the ISO 4217 standard, such as USD, GBP, or JPY.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>KHR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>IRR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LAK</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>NPR</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>OMR</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Class__c</fullName>
        <label>From Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Seat__c</fullName>
        <label>From Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goodwill_Detail__c</fullName>
        <label>Goodwill Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goodwill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goodwill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISC_Form_No__c</fullName>
        <description>For In-flight compensation</description>
        <label>ISC Form No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Individual__c</fullName>
        <description>Checks whether the compensation is meant for an individual</description>
        <formula>!ISBLANK(Case_Group_Member__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code_No__c</fullName>
        <description>for in-flight compensation</description>
        <label>Item Code No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>for in-flight compensation</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability__c</fullName>
        <label>Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Act of Legislation 2015 for International Air Transportation</fullName>
                </value>
                <value>
                    <fullName>EC261/2004</fullName>
                </value>
                <value>
                    <fullName>Local Laws</fullName>
                </value>
                <value>
                    <fullName>MC99 (The Montreal Convention)</fullName>
                </value>
                <value>
                    <fullName>US Laws</fullName>
                </value>
                <value>
                    <fullName>Warsaw Convention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App_Key__c</fullName>
        <label>Mobile App Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassengerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the passenger associated with this compensation.</description>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_Name__c</fullName>
        <description>Name of the passenger.</description>
        <formula>Case_Group_Member__r.Passengerid__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Number__c</fullName>
        <formula>CaseId__r.Effect_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROE_US_Dollars__c</fullName>
        <description>Rate of exchange (USD)</description>
        <label>ROE (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rate of exchange</description>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Class__c</fullName>
        <label>To Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Seat__c</fullName>
        <label>To Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTotal_sum_of_CGM__c</fullName>
        <formula>IF(
Is_Individual__c ,
Total__c ,
Total__c * CaseId__r.SUM_Involved_Passenger_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Cash_EMD__c</fullName>
        <formula>IF(
 Is_Individual__c ,
 Amount__c ,
 Amount__c * CaseId__r.SUM_Involved_Passenger_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Cash/EMD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_THB__c</fullName>
        <formula>IF( ROE__c &gt; 0 &amp;&amp; Total_Amount_Cash_EMD__c &gt; 0 , Total_Amount_Cash_EMD__c * ROE__c , Total_Amount_Cash_EMD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_THB__c</fullName>
        <formula>IF( ROE__c &gt; 0 &amp;&amp;  Amount__c &gt; 0 , Amount__c * ROE__c ,  Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_USD__c</fullName>
        <formula>IF( ROE_US_Dollars__c  &gt; 0 &amp;&amp; Amount__c &gt; 0 , Amount__c *  ROE_US_Dollars__c  , Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>จำนวนของสิ่งที่ Compensate</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Irregularity__c</fullName>
        <label>Type of Irregularity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Displays the unit of the compensation</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Kilogramme</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
                <value>
                    <fullName>Ticket</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpgradeCertificate__c</fullName>
        <description>for in-flight compensation</description>
        <label>Upgrade Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stand-by Upgrade Certificate</fullName>
                </value>
                <value>
                    <fullName>Confirmed Upgrade Certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compensation</label>
    <nameField>
        <displayFormat>CMP-{0000000000}</displayFormat>
        <label>Running Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensations</pluralLabel>
    <recordTypes>
        <fullName>CFMS_Compensation</fullName>
        <active>true</active>
        <label>CFMS Compensation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CFMS_Compensation_Final</fullName>
        <active>true</active>
        <label>CFMS Compensation Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>GS_Compensation</fullName>
        <active>true</active>
        <label>GS Compensation</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_flight_Compensation</fullName>
        <active>true</active>
        <description>for in-flight compensation</description>
        <label>In-flight Compensation</label>
    </recordTypes>
    <recordTypes>
        <fullName>SD_SR_Compensation</fullName>
        <active>true</active>
        <description>Compensation for SD/SR (non BKK)</description>
        <label>SD/SR Compensation</label>
    </recordTypes>
    <recordTypes>
        <fullName>SD_SR_Compensation_Final</fullName>
        <active>true</active>
        <description>Compensation for SD/SR - Final (non BKK)</description>
        <label>SD/SR Compensation Final</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ROE_USD</fullName>
        <active>true</active>
        <description>Validation Rule for ROE</description>
        <errorConditionFormula>AND( 
OR($Profile.Name &lt;&gt; &quot;Ground Customer Service&quot;) 

, 
OR($Profile.Name &lt;&gt; &quot;Ground Customer Service Not BKK&quot;) 

,
OR(RecordType.Name == &quot;SD/SR Compensation&quot;, 
RecordType.Name == &quot;SD/SR Compensation Final&quot;) 
, 
OR(Ispickval(Compensation_Tools__c , &quot;Cash&quot;), 
Ispickval(Compensation_Tools__c , &quot;EMD&quot;)) 
, 
OR( 
NOT(Ispickval(Currency__c , &quot;USD&quot;)), 
ISBLANK(TEXT(Currency__c))) 
, 
OR( ROE_US_Dollars__c  &lt;= 0, ISBLANK( ROE_US_Dollars__c )))</errorConditionFormula>
        <errorDisplayField>ROE_US_Dollars__c</errorDisplayField>
        <errorMessage>ROE (USD) is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROE_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR($Profile.Name &lt;&gt; &quot;Ground Customer Service&quot;)

,
OR($Profile.Name &lt;&gt; &quot;Ground Customer Service Not BKK&quot;) 

,
OR(RecordType.Name == &quot;CFMS Compensation&quot;,
RecordType.Name == &quot;CFMS Compensation Final&quot;)
,
OR(Ispickval(Compensation_Tools__c , &quot;Cash&quot;),
Ispickval(Compensation_Tools__c , &quot;EMD&quot;))
,
OR(
NOT(Ispickval(Currency__c , &quot;THB&quot;)),
ISBLANK(TEXT(Currency__c)))
,
OR(ROE__c &lt;= 0, ISBLANK(ROE__c)))</errorConditionFormula>
        <errorDisplayField>ROE__c</errorDisplayField>
        <errorMessage>ROE is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISPICKVAL(Compensation_Tools__c,&apos;Cash&apos;), ISPICKVAL(Compensation_Tools__c,&apos;EMD&apos;)), 
OR(  Amount__c == 0,ISBLANK(Amount__c)), 
OR($User.Department == &apos;S4&apos;, $User.Department = &apos;S3&apos;, $User.Department = &apos;AO&apos;)
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Please identify Amount if compensation tool is &apos;Cash&apos; or &apos;EMD&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Approved_Status_OnCeate</fullName>
        <active>true</active>
        <errorConditionFormula>(  RecordType.DeveloperName == &apos;CFMS_Compensation&apos; || RecordType.DeveloperName == &apos;SD_SR_Compensation&apos;) &amp;&amp; ISNEW() &amp;&amp; ISPICKVAL(Status__c , &apos;Approved&apos; )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot create new compensation with Approved status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_total</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(Compensation_Tools__c,&apos;Cash&apos;)), NOT(ISPICKVAL(Compensation_Tools__c,&apos;EMD&apos;)), 
OR( Total__c == 0,ISBLANK(Total__c )), 
OR($User.Department == &apos;S4&apos;, $User.Department = &apos;S3&apos;, $User.Department = &apos;AO&apos;)
)</errorConditionFormula>
        <errorDisplayField>Total__c</errorDisplayField>
        <errorMessage>Please identify Total if compensation tool is not &apos;Cash&apos; or &apos;EMD&apos;.</errorMessage>
    </validationRules>
</CustomObject>